--- a/app/views/projects/_my-postings.html.erb
+++ b/app/views/projects/_my-postings.html.erb
@@ -8,6 +8,7 @@
       <li class="project__created-at-with-status">
         <div >
           Posted <%=distance_of_time_in_words_to_now(project.created_at)%>
+          <i class="far fa-stopwatch"></i>
         </div>
         <ul>
           <li>
