--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -5,10 +5,7 @@
   </div>
   <ul class="projects-posted-by-client">
     <% if @projects.empty? %>
-      <div class="start__posting-projects">
-        <%=inline_svg_tag 'project.svg'%>
-        start posting projects
-      </div>
+      <%= render 'no-projects' %>
     <% else %>
       <%= render 'my-postings' ,projects: @projects%>
     <% end %>
