--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -114,12 +114,14 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
   align-items: center;
   transition: transform 0.6s;
   padding-top: 2rem;
+  max-width: 650px;
+  margin: 0 auto;
   .search__wrapper {
     padding: 1rem 2rem;
     border: 1px solid #c1c1c1;
     background: white;
 
-    width: 650px;
+    width: 100%;
     border-top-right-radius: 0.5rem;
     border-top-left-radius: 0.5rem;
   }
@@ -166,7 +168,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     }
   }
   .search__results-projects {
-    max-width: 650px;
+    width: 100%;
     overflow: scroll;
     max-height: 90vh;
     scrollbar-width: none;
@@ -175,7 +177,7 @@ $box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px
     @import "allprojects";
   }
   .search__results-freelancers {
-    width: 650px;
+    width: 100%;
     border: 1px solid #cac4c4;
     border-top: none;
     .freelancers {
